# isofs

./: README.md  ROADMAP.md  flake.nix
crates/isofs/: Cargo.toml
crates/isofs-cli/: Cargo.toml
crates/isofs-cli/src/: cli.rs  main.rs
crates/isofs/src/: builder.rs  error.rs  lba.rs  lib.rs  parse.rs  path.rs  serialize.rs  spec.rs  writer.rs
crates/isofs/src/writer/: fs.rs  mod.rs  path_table.rs  sector.rs  volume.rs
crates/tests/: Cargo.toml
scripts/: verify-path-table.py
